# desktop-catalog-manager

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  codex_bootstrap_prompt_desktop_catalog_manager.md  desktop_catalog_manager_phase1_foundation_for_codex.md  fisholha_desktop_catalog_manager_tz_for_codex.md  pyproject.toml
.codex/: config.toml
.codex/skills/project-guardian/: SKILL.md
app/: __init__.py  bootstrap.py
app/core/: __init__.py  database.py  logging_config.py  security.py  settings.py
app/db/: __init__.py  models.py  session.py
app/integrations/: woocommerce_client.py  wp_media_client.py
app/models/: enums.py  user.py
app/modules/auth/: __init__.py
app/repositories/: auth_repository.py  catalog_repository.py  category_repository.py  product_image_repository.py  product_repository.py  publish_job_repository.py  sync_run_repository.py
app/resources/: README.md
app/services/: auth_service.py  catalog_maintenance_service.py  catalog_service.py  env_config_service.py  login_memory_service.py  operation_log_service.py  product_image_service.py  publish_service.py  sync_import_service.py  wc_image_download_service.py  wc_media_publish_service.py
app/ui/: icons.py  login_dialog.py  main_window.py  styles.py
docs/: architecture.md  phase_bdd_success_criteria.md  phase_scope_review_2026-04-14.md  seo_fields_research_2026-04-14.md
fisholha_desktop_catalog_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_phase2_models.py  test_phase5_publish.py  test_phase6_bulk_edit.py  test_schema_smoke.py
(+17 files in other folders)
